mapped whole project with blueprints

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -16,7 +16,7 @@
             <input class="username" type="text" name="username" placeholder="Username" />
             <br>
             <input type="password" name="password" placeholder="Password" />
-            <p>Not a memeber yet? Sing up <a href="{{ url_for('signin') }}">Here</a></p>
+            <p>Not a memeber yet? Sing up <a href="{{ url_for('signup_bp.signup') }}">Here</a></p>
             <button class="submit" type="submit">Log in</button>
         </form>
     </div>
