--- a/templates/post/singlepost.html
+++ b/templates/post/singlepost.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="navbarElement" href="{{ url_for('blog') }}">Write a blog</a>
-        <a class="navbarElement" href="{{ url_for('posts') }}">Posts</a>
-        <a class="navbarElement" href="{{ url_for('logout') }}">Logout</a>
+        <a class="navbarElement" href="{{ url_for('blog_bp.blog') }}">Write a blog</a>
+        <a class="navbarElement" href="{{ url_for('posts_bp.posts') }}">Posts</a>
+        <a class="navbarElement" href="{{ url_for('logout_bp.logout') }}">Logout</a>
     </div>
     <div class="container">
         {% for text in post%}
