--- a/templates/auth/reset.html
+++ b/templates/auth/reset.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% include "./add-ons/head.html" %}
+{% block head %}
+{% endblock %}
     <title>Document</title>
 </head>
 <body>
