--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+{% include "./add-ons/head.html" %}
+{% block head %}
+{% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/posts.css') }}">
     <title>Document</title>
 </head>
 <body>
+    {% include "./add-ons/navbar.html" %}
+    {% block navbar %}
+    {% endblock %}
     <div class="container">
         {% for post in blogPost %}
             <div class="box-container">
@@ -19,6 +18,5 @@
             </div>
         {% endfor %}
     </div>
-    
 </body>
 </html>
