--- a/templates/post/posts.html
+++ b/templates/post/posts.html
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% include "./add-ons/head.html" %}
+{% block head %}
+{% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/posts.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar">
-        <a class="navbarElement" href="{{ url_for('blog_bp.blog') }}">Write a blog</a>
-        <a class="navbarElement" href="{{ url_for('posts_bp.posts') }}">Posts</a>
-        <a class="navbarElement" href="{{ url_for('logout_bp.logout') }}">Logout</a>
-        <form class="searchBar" action="/posts/" method="post">
-            <input name="search" class="search"/>
-            <button name="searchBtn" type="submit"><i class="fa fa-search"></i></button>
-        </form>
-    </div>
+    {% include "./add-ons/navbar.html" %}
+    {% block navbar %}
+    {% endblock %}
     <div class="container">
         {% for post in posts %}
             <div class="box-container">
