--- a/templates/main/blog.html
+++ b/templates/main/blog.html
@@ -2,6 +2,7 @@
 {% block head %}
 {% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/blog.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
     <title>Document</title>
 </head>
 <body>
